--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,19 +2,13 @@
 name = "nlauncher"
 version = "0.1.0"
 edition = "2021"
+include = ["src/", "data/", "Cargo.toml"]
 
 [dependencies]
 gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
 glib = { version = "0.20.12" }
 gio = { version = "0.20.12" }
 gtk4-layer-shell = "0.5.0"
-cairo-rs = "0.20.12"
-chrono = { version = "0.4.41" }
-tokio = { version = "1.46.0", features = ["full"] }
-socket2 = "0.6.0"
-once_cell = "1.21.3"
 serde = "1.0.219"
 serde_json = "1.0.140"
-glob = "0.3.2"
-glib-macros = "0.20.12"
-async-channel = "2.3.1"
+dirs = "6.0.0"
