--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nlauncher"
 version = "0.1.0"
 edition = "2021"
+include = ["data/**/*", "src/**/*", "Cargo.toml"]
 
 [dependencies]
 gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
