--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 dirs = "6.0.0"
 socket2 = "0.6.0"
+walkdir = "2.5.0"
+log = "0.4.22"
+env_logger = "0.11.5"
