--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,19 @@
 name = "nlauncher"
 version = "0.1.0"
 edition = "2021"
-include = ["data/**/*", "src/**/*", "Cargo.toml"]
+include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]
 
 [dependencies]
-gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
-glib = { version = "0.20.12" }
-gio = { version = "0.20.12" }
-gtk4-layer-shell = "0.5.0"
-serde = "1.0.219"
-serde_json = "1.0.140"
-dirs = "6.0.0"
-socket2 = "0.6.0"
+gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.212.6" }
+freedesktop-desktop-entry = "0.5.0"
 walkdir = "2.5.0"
 log = "0.4.22"
 env_logger = "0.11.5"
+dirs = "6.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+image = "0.25.1"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0.100"
+
+[workspace]
