--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]
 [dependencies]
 gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.212.6" }
 freedesktop-desktop-entry = "0.5.0"
+freedesktop-icons = "0.4.0"
 walkdir = "2.5.0"
 log = "0.4.22"
 env_logger = "0.11.5"
