--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ serde_json = "1.0"
 image = "0.25.1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.100"
+nucleo = "0.3.0"
+numbat = "1.10.0"
+regex = "1.10.0"
+global-hotkey = "0.4.2"
 
 [workspace]
