--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ anyhow = "1.0.100"
 nucleo = "0.3.0"
 numbat = "1.10.0"
 libc = "0.2"
-keepass = "0.8"
+secret-service = { version = "5.1.0", features = ["rt-async-io-crypto-rust"] }
 dirs = "5.0"
 
 [workspace]
