--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,16 @@
 name = "nlauncher"
 version = "0.1.0"
 edition = "2021"
+default-run = "nlauncher"
 include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]
+
+[[bin]]
+name = "nlauncher"
+path = "src/main.rs"
+
+[[bin]]
+name = "clipboard-daemon"
+path = "src/bin/clipboard-daemon.rs"
 
 [dependencies]
 gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.216.1", features = ["wayland"] }
