--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,28 +2,17 @@
 name = "nlauncher"
 version = "0.1.0"
 edition = "2021"
-default-run = "nlauncher"
-include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]
-
-[[bin]]
-name = "nlauncher"
-path = "src/main.rs"
-
-[[bin]]
-name = "clipboard-daemon"
-path = "src/bin/clipboard-daemon.rs"
+include = ["data/**/*", "src/**/*", "Cargo.toml"]
 
 [dependencies]
-gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.216.1", features = ["wayland"] }
-freedesktop-desktop-entry = "0.5.0"
-freedesktop-icons = "0.4.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-anyhow = "1.0.100"
-nucleo = "0.3.0"
-numbat = "1.10.0"
-libc = "0.2"
-secret-service = { version = "5.1.0", features = ["rt-async-io-crypto-rust"] }
-dirs = "5.0"
-
-[workspace]
+gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
+glib = { version = "0.20.12" }
+gio = { version = "0.20.12" }
+gtk4-layer-shell = "0.5.0"
+serde = "1.0.219"
+serde_json = "1.0.140"
+dirs = "6.0.0"
+socket2 = "0.6.0"
+walkdir = "2.5.0"
+log = "0.4.22"
+env_logger = "0.11.5"
