--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ socket2 = "0.6.0"
 walkdir = "2.5.0"
 log = "0.4.22"
 env_logger = "0.11.5"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = 3
+strip = true
